# ukwikibot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  logging.yaml  parser.py  pyproject.toml  requirements.txt  run.py  user-config.py  wiki.py
.github/workflows/: build.yaml  ci.yaml
tests/: test_message_parser.py  test_wiki_manager.py
wikibot/: bot.py  config.py  parser.py  wiki.py
